--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 #############
-System
+# System
 #############
 
 .DS_Store
 
 #############
-node
+# node
 #############
 
 lib-cov
@@ -25,7 +25,7 @@ npm-debug.log
 node_modules
 
 #############
-app
+# app
 #############
 
 app/tmp
